# zhiyinMail

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  credentials.rs  error.rs  lib.rs  mail.rs  main.rs  models.rs  state.rs  store.rs
