[package]
name = "unified-mail"
version = "0.1.0"
description = "A minimal multi-account desktop mail client with a unified inbox."
authors = ["Unified Mail"]
edition = "2021"

[lib]
name = "unified_mail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
html-escape = "0.2"
dirs = "5"
imap = "2"
keyring = "2"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "hostname", "pool", "rustls-tls"] }
mail-parser = "0.9"
native-tls = "0.2"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
